@@ -6,6 +6,8 @@ import fun.sast.sastlogin.model.User;
 import fun.sast.sastlogin.sastlink.SastLinkServiceAdapter;
 import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.text.ClickEvent;
+import net.minecraft.text.Style;
 import net.minecraft.text.Text;
 
 import java.util.List;
@@ -17,10 +19,24 @@ import static net.minecraft.server.command.CommandManager.literal;
 public class BindCommand {
     public static void bindRegister(CommandDispatcher<ServerCommandSource> dispatcher) {
         dispatcher.register(literal("bind")
-                .then(argument("account", StringArgumentType.word())
+                .then(argument("sast-link-id", StringArgumentType.word())
+                        .executes(context -> {
+                            String linkId = StringArgumentType.getString(context, "sast-link-id");
+                            ServerPlayerEntity player = Objects.requireNonNull(context.getSource().getPlayer());
+                            SastLinkServiceAdapter.linkIdPlayers.put(linkId, player);
+                            context.getSource().sendFeedback(() -> Text.literal("§aPlease use sast-link auth-url below."), false);
+                            context.getSource().sendFeedback(() -> Text.literal(SastLinkServiceAdapter.getAuthUrl())
+                                    .setStyle(Style.EMPTY
+                                            .withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_URL, SastLinkServiceAdapter.getAuthUrl()))
+                                            .withUnderline(true)), false);
+                            context.getSource().sendFeedback(() -> Text.literal("§bBind expire time: 60s."), false);
+                            SastLinkServiceAdapter.delayFailedBindTask(linkId);
+                            return 1;
+                        })
                         .then(argument("password", StringArgumentType.word())
                                 .executes(context -> {
-                                    String email = StringArgumentType.getString(context, "account") + "@njupt.edu.cn";
+                                    String linkId = StringArgumentType.getString(context, "sast-link-id");
+                                    String email = linkId + "@njupt.edu.cn";
                                     String password = StringArgumentType.getString(context, "password");
                                     ServerPlayerEntity player = Objects.requireNonNull(context.getSource().getPlayer());
                                     boolean success = SastLinkServiceAdapter.bindAccount(player.getUuidAsString(), player.getName().getString(), email, password);
@@ -35,13 +51,13 @@ public class BindCommand {
 
     public static void unBindRegister(CommandDispatcher<ServerCommandSource> dispatcher) {
         dispatcher.register(literal("unbind")
-                .then(argument("account", StringArgumentType.word())
+                .then(argument("sast-link-id", StringArgumentType.word())
                         .executes(context -> {
-                            String linkId = StringArgumentType.getString(context, "account");
+                            String linkId = StringArgumentType.getString(context, "sast-link-id");
                             ServerPlayerEntity player = Objects.requireNonNull(context.getSource().getPlayer());
                             boolean success = SastLinkServiceAdapter.unBindAccount(player.getUuidAsString(), linkId);
                             if (success) {
-                                player.setInvulnerable(false);
+                                player.setInvulnerable(true);
                                 context.getSource().sendFeedback(() -> Text.literal("§aUnBind success."), false);
                             } else {
                                 context.getSource().sendFeedback(() -> Text.literal("§cUnBind failed."), false);
@@ -57,25 +73,13 @@ public class BindCommand {
 
                     List<User> users = SastLinkServiceAdapter.getLinkAccounts(player.getUuidAsString());
                     context.getSource().sendFeedback(() -> Text.literal("§aBOUND SAST-LINK ACCOUNTS:"), false);
-                    context.getSource().sendFeedback(() -> Text.literal(
-                            "§a " + String.format("%10s", "username")
-                                    + String.format("%15s", "account")
-                                    + String.format("%25s", "email")), false);
-                    users.forEach(user -> {
-                        String username = String.format("%10s", user.getName());
-                        String linkId = String.format("%15s", user.getLinkId());
-                        String email = String.format("%25s", user.getEmail());
-                        context.getSource().sendFeedback(() -> Text.literal("§a" + username + linkId + email), false);
-                    });
+                    context.getSource().sendFeedback(() -> Text.literal("§a %10s %15s %25s ".formatted("username", "sast-link-id", "email")), false);
+                    users.forEach(user -> context.getSource().sendFeedback(() -> Text.literal("§a %10s %15s %25s ".formatted(user.getName(), user.getLinkId(), user.getEmail())), false));
 
                     List<User.Player> players = SastLinkServiceAdapter.getMCAccounts(player.getUuidAsString());
                     context.getSource().sendFeedback(() -> Text.literal("§aBOUND PLAYERS:"), false);
-                    context.getSource().sendFeedback(() -> Text.literal(
-                            "§a " + String.format("%10s", "username")), false);
-                    players.forEach(p -> {
-                        String username = String.format("%10s", p.getName());
-                        context.getSource().sendFeedback(() -> Text.literal("§a" + username), false);
-                    });
+                    context.getSource().sendFeedback(() -> Text.literal("§a %10s ".formatted("username")), false);
+                    players.forEach(p -> context.getSource().sendFeedback(() -> Text.literal("§a %10s ".formatted(p.getName())), false));
                     return 1;
                 }));
     }
